--- a/src/Cortside.DomainEvent.Outbox/Cortside.DomainEvent.EntityFramework.csproj
+++ b/src/Cortside.DomainEvent.Outbox/Cortside.DomainEvent.EntityFramework.csproj
@@ -4,6 +4,20 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageId>Cortside.DomainEvent.EntityFramework</PackageId>
+    <Company>Cortside Consulting</Company>
+    <Description>Library for sending AMQP 1.0 messages using Outbox Pattern and EntityFramework</Description>
+    <Copyright>Copyright (c) 2017 Cortside Consulting and Contributors</Copyright>
+    <Summary>Library for sending AMQP 1.0 messages using Outbox Pattern and EntityFramework</Summary>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseFile>..\..\LICENSE.md</PackageLicenseFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.md" Pack="true" PackagePath=""/>
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Cortside.Common.Correlation" Version="1.0.165" />
     <PackageReference Include="Cortside.Common.Hosting" Version="1.0.165" />
