update docs and build process; add sonarcloud

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ pull_requests:
 environment:
   # Don't report back to the mothership
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  JAVA_HOME: C:\Program Files\Java\jdk15
 
 init:
 - ps: $Env:LABEL = "CI" + $Env:APPVEYOR_BUILD_NUMBER.PadLeft(5, "0")
@@ -36,13 +37,22 @@ before_build:
 build:
   publish_nuget: true
   publish_nuget_symbols: true
+  use_snupkg_format: true 
   include_nuget_references: true
   verbosity: minimal
 
 build_script:
+
+- dotnet build src/Cortside.Common.sln --configuration %Configuration% /property:Version=%APPVEYOR_BUILD_VERSION%	- dotnet build src/Cortside.Common.sln --configuration %Configuration% /property:Version=%APPVEYOR_BUILD_VERSION%
+
+
+- dotnet tool install --global dotnet-sonarscanner --version 5.0.4
+- dotnet sonarscanner begin /o:"cortside" /k:"cortside_cortside.common" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="88c88c857e5710d2a8ec472b7b5c2e91eb79fc4d"
 - dotnet build src/Cortside.DomainEvent.sln --configuration %Configuration% /property:Version=%APPVEYOR_BUILD_VERSION%
-- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --no-build --logger:trx;LogFileName=results.trx /p:DebugType=full src/Cortside.DomainEvent.Tests/Cortside.DomainEvent.Tests.csproj" -filter:"+[*]* -[RsvpScheduler.Tests*]*" -output:".\results.xml" -oldStyle
-- codecov -f .\Results.xml -t $(codecov_token)
+- dotnet test src/Cortside.DomainEvent.sln --no-build
+- dotnet sonarscanner end /d:sonar.login="88c88c857e5710d2a8ec472b7b5c2e91eb79fc4d"
+#- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --no-build --logger:trx;LogFileName=results.trx /p:DebugType=full src/Cortside.DomainEvent.Tests/Cortside.DomainEvent.Tests.csproj" -filter:"+[*]* -[RsvpScheduler.Tests*]*" -output:".\results.xml" -oldStyle
+#- codecov -f .\Results.xml -t $(codecov_token)
 #- dotnet test src/Cortside.Common.DomainEvent.Tests/Cortside.Common.DomainEvent.Tests.csproj --no-build
 
 after_build:
@@ -53,7 +63,7 @@ after_build:
         $fileVersion = "${fileVersion}-${branch}"; 
     }
     
-    dotnet pack src/cortside.domainevent.sln --configuration $env:configuration -o ((get-location).Path + '\artifacts') /property:Version=$fileVersion 
+    dotnet pack src/cortside.domainevent.sln --include-symbols -p:SymbolPackageFormat=snupkg --configuration $env:configuration -o ((get-location).Path + '\artifacts') /property:Version=$fileVersion 
     
     #gci -include *.nuspec -Recurse | %{ 
     #    $csproj = ($_.Fullname).Replace('.nuspec','.csproj')
