--- a/src/Cortside.DomainEvent.IntegrationTests/Cortside.DomainEvent.IntegrationTests.csproj
+++ b/src/Cortside.DomainEvent.IntegrationTests/Cortside.DomainEvent.IntegrationTests.csproj
@@ -13,6 +13,10 @@
     <None Remove="config.user.json" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.2" />
