--- a/src/Cortside.DomainEvent.Tests/Cortside.DomainEvent.Tests.csproj
+++ b/src/Cortside.DomainEvent.Tests/Cortside.DomainEvent.Tests.csproj
@@ -10,6 +10,10 @@
   <ItemGroup>
     <PackageReference Include="AMQPNetLite.Core" Version="2.4.1" />
     <PackageReference Include="AMQPNetLite.Serialization" Version="2.4.1" />
+    <PackageReference Include="coverlet.collector" Version="3.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.2" />
