--- a/src/Cortside.DomainEvent.EntityFramework.IntegrationTests/Cortside.DomainEvent.EntityFramework.IntegrationTests.csproj
+++ b/src/Cortside.DomainEvent.EntityFramework.IntegrationTests/Cortside.DomainEvent.EntityFramework.IntegrationTests.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.12" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
