--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ build_script:
 - dotnet tool install --global dotnet-sonarscanner --version 5.0.4
 - dotnet sonarscanner begin /o:"cortside" /k:"cortside_cortside.domainevent" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="88c88c857e5710d2a8ec472b7b5c2e91eb79fc4d" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
 - dotnet build src/Cortside.DomainEvent.sln --configuration %Configuration% /property:Version=%APPVEYOR_BUILD_VERSION%
-- ps: gci -filter *tests.csproj -recurse | %{ dotnet test $_.FullName --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover }
+- ps: gci -filter *Tests.csproj -recurse | %{ dotnet test $_.FullName --no-build /p:CollectCoverage=true /p:CoverletOutputFormat=opencover }
 - dotnet sonarscanner end /d:sonar.login="88c88c857e5710d2a8ec472b7b5c2e91eb79fc4d"
 
 after_build:
